# ancestral-vision

./: .dockerignore  .env.local.example  .env.production.example  .firebaserc  .gitignore  CLAUDE.md  Dockerfile  cloudbuild.yaml  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
.claude/: settings.json
reference_prototypes/ancestral-synth/: .env.example  .gitignore  README.md  gen_small.yaml  genealogy.yaml  package-lock.json  pyproject.toml
reference_prototypes/ancestral-synth/ancestral_synth/: __init__.py  cli.py  config.py
reference_prototypes/ancestral-synth/ancestral_synth/agents/: __init__.py  biography_agent.py  correction_agent.py  dedup_agent.py  extraction_agent.py  shared_event_agent.py
reference_prototypes/ancestral-synth/ancestral_synth/domain/: __init__.py  enums.py  models.py
reference_prototypes/ancestral-synth/ancestral_synth/export/: __init__.py  csv_exporter.py  f8vision_exporter.py  gedcom_exporter.py  json_exporter.py
reference_prototypes/ancestral-synth/ancestral_synth/persistence/: __init__.py  database.py  relations.py  repositories.py  tables.py
reference_prototypes/ancestral-synth/ancestral_synth/services/: __init__.py  genealogy_service.py  query_service.py  validation.py
reference_prototypes/ancestral-synth/ancestral_synth/utils/: __init__.py  cost_tracker.py  rate_limiter.py  retry.py  timing.py
reference_prototypes/ancestral-synth/plans/: optimize.md  validation_features.md
reference_prototypes/ancestral-synth/tests/: conftest.py
(+568 files in other folders)
