[project]
name = "ancestral-synth"
version = "0.1.0"
description = "A fictional genealogical dataset generator using LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10,<3",
    "pydantic-ai>=0.0.30",
    "pydantic-settings>=2.6",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20",
    "greenlet>=3.0",
    "loguru>=0.7",
    "typer>=0.15",
    "rich>=13.9",
    "numpy>=2.0",
    "python-dotenv>=1.0",
    "google-genai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
ancestral-synth = "ancestral_synth.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ancestral_synth"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
